@@ -77,7 +77,6 @@ const guint OPTGRP_POPUP		=	4;
 const guint OPTGRP_MAILBOX		=	8;
 const guint OPTGRP_INFORMATION	=	16;
 const guint OPTGRP_SECURITY		=	32;
-const guint OPTGRP_MAILS		=	64;
 
 class Gnubiff_Options : public Options {
 public:
@@ -88,6 +87,7 @@ protected:
 	void add_options_information (void);
 	void add_options_mailbox (void);
 	void add_options_popup (void);
+	void add_options_security (void);
 private:
 	const static guint protocol_int[];
 	const static gchar *protocol_gchar[];
